--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/yu_picture
     username: root
-    password: 123456
-  mybatis-plus:
+    password: root
+mybatis-plus:
     configuration:
       map-underscore-to-camel-case: false
       # 仅在开发环境开启日志
@@ -34,3 +34,11 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.yupi.yupi_tuku_backend.controller
+## 对象存储配置（需要从腾讯云获取）
+#cos:
+#  client:
+#    host: xxx
+#    secretId: xxx
+#    secretKey: xxx
+#    region: xxx
+#    bucket: xxx
