--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
   port: 8123
   servlet:
     context-path: /api
+
 spring:
   application:
     name: yu-picture-backend
@@ -11,6 +12,11 @@ spring:
     url: jdbc:mysql://localhost:3306/yu_picture
     username: root
     password: root
+    # 开放更大的文件上传体积
+  servlet:
+    multipart:
+       max-file-size: 10MB
+
 mybatis-plus:
     configuration:
       map-underscore-to-camel-case: false
